--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 
             <li id="antic" class="nav-item"><a class="nav-link" href=""><b> Gallery</b></a></li>
             <li id="antic" class="nav-item"><a class="nav-link" href=""><b>Services</b> </a></li>
-
+     <li id="antic" class="nav-item"><a class="nav-link" href=""><b>join us</b> </a></li>
           </ul>
 
         </div>
